# ai-prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
backend/: .env.example  pyproject.toml
backend/app/: api_chat.py  api_documents.py  api_templates.py  config.py  llm.py  main.py  schemas.py  templates_loader.py
backend/tests/: test_api_chat.py  test_api_documents.py  test_api_templates.py  test_health.py  test_llm.py  test_placeholder.py  test_static_serve.py  test_templates_loader.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  theme.test.ts
frontend/src/components/: FormPane.test.tsx  FormPane.tsx  PdfDownloadButton.test.tsx  PdfDownloadButton.tsx  PreviewPane.tsx  TemplatePicker.test.tsx  TemplatePicker.tsx
frontend/src/lib/: api.ts  markdown.test.ts  markdown.ts
frontend/src/state/: AppContext.tsx
scripts/: check_templates.py  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE-NOTICE.md
tests/: test_check_templates.py  test_scripts.py
